# ml-project

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
cfg/: basic_full_cycle_test.ini  entry_point_test.ini  kfold.ini  kfold.ini.txt  kfold_create_sub.ini.txt  kfold_fast.ini.txt  train.ini  using_cache.ini
docs/source/: conf.py  index.rst
forest_cover_type/: __main__.py  runner.py  settings.py  utils.py
forest_cover_type/package_one/: module_one.py
forest_cover_type/predict/: predict_v1.py
forest_cover_type/preprocessing/: preprocessing_v1.py
forest_cover_type/report/: kaggle_utils.py
forest_cover_type/train/: train_v1.py
tests/: conftest.py  context.py  test_entry.py  test_poetry_template.py
tests/data_for_test/: test.csv  train.csv
tests/package_one/: test_module_one.py
tests/package_two/: test_module_two.py
