[tool.poetry]
name = "forest_cover_type"
version = "0.1.0"
description = "A minimal, structured Python project."

license = "MIT"
authors = ["name <name@mail.com>"]
maintainers = []
readme = "README.md"

homepage = "https://github.com/MislavJaksic/Python-Project-Template"
repository = "https://github.com/MislavJaksic/Python-Project-Template"
documentation = "https://github.com/MislavJaksic/Python-Project-Template"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22.0"
loguru = "^0.5.3"
pytest-integration = "0.2.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
black = "^22.3.0"
pytest = "^7.1.2"
sphinx = "^2.3.1"
click = "^8.1.0"

[tool.poetry.scripts]
forest_cover_type = "forest_cover_type.runner:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
