[tool.poetry]
name = "forest_cover_type"
version = "0.1.0"
description = "A minimal, structured Python project."

license = "MIT"
authors = ["name <name@mail.com>"]
maintainers = []
readme = "README.md"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
loguru = "^0.5.3"
pytest-integration = "0.2.2"
pandas = "^1.4.2"
scipy = "1.8.0"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
black = "^22.3.0"
pytest = "^7.1.2"
sphinx = "^2.3.1"
click = "^8.1.0"

[tool.poetry.scripts]
main = "forest_cover_type.runner:run"
load_data = "forest_cover_type.runner:load_data"
step1 = "forest_cover_type.runner:step1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
