[tool.poetry]
name = "forest_cover_type"
version = "0.1.0"
description = "A minimal, structured Python project."

license = "MIT"
authors = ["name <name@mail.com>"]
maintainers = []
readme = "README.md"

keywords = []

classifiers = []

[tool.poetry.dependencies]
python = ">= 3.8, < 3.11"
loguru = "^0.5.3"
pytest-integration = "0.2.2"
pandas = "^1.4.2"
scipy = "1.8.0"
scikit-learn = "^1.0.2"
mlflow = "^1.25.1"
pywin32 = {version = "^304", optional = true}
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.8.1"
black = "^22.3.0"
pytest = "^7.1.2"
jinja2 = "<3.1"
sphinx = "2.4.5"
click = "^8.1.0"
mypy = "^0.950"

[tool.poetry.scripts]
# run the full cycle command to create the kaggle submission file with default settings.py
entry = "forest_cover_type.runner:run"
load_data = "forest_cover_type.runner:load_data"
step1 = "forest_cover_type.runner:step1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
